@@ -424,7 +424,9 @@ def build_script():
         descriptors=options.descriptors,
         source_tracking=options.source_tracking,
         line_tracking=options.line_tracking,
-        store_source=options.store_source)
+        store_source=options.store_source,
+        inline_code = options.inline_code,
+    )
 
     l = BrowserLinker(args,
                       output=options.output,
